--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
+    "react-particles": "^2.1.3",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.10.1",
     "react-scroll-motion": "^0.3.0",
@@ -31,6 +32,7 @@
     "react-toastify": "^9.0.5",
     "react-transition-group": "^4.4.2",
     "slick-carousel": "^1.8.1",
+    "tsparticles": "^2.1.3",
     "video-react": "^0.15.0",
     "yup": "^0.32.11"
   },
